--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,489 @@
-# Gradle files
-.gradle/
-build/
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Gerador de Sensi</title>
 
-# Local configuration file (sdk path, etc)
-local.properties
+<style>
+:root{
+--accent:#ffcc00;
+--accent2:#ffd633;
+}
 
-# Log/OS Files
-*.log
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Segoe UI',sans-serif;}
 
-# Android Studio generated files and folders
-captures/
-.externalNativeBuild/
-.cxx/
-*.aab
-*.apk
-output-metadata.json
+body{
+background:linear-gradient(135deg,#0a0a0a,#111,#0a0a0a);
+color:#fff;
+min-height:100vh;
+}
 
-# IntelliJ
-*.iml
-.idea/
-misc.xml
-deploymentTargetDropDown.xml
-render.experimental.xml
+.container{
+max-width:500px;
+margin:20px auto;
+padding:20px;
+background:#141414;
+border-radius:18px;
+box-shadow:0 0 25px rgba(255,204,0,0.15);
+animation:fade .5s;
+}
 
-# Keystore files
-*.jks
-*.keystore
+@keyframes fade{
+from{opacity:0;transform:translateY(15px);}
+to{opacity:1;transform:translateY(0);}
+}
 
-# Google Services (e.g. APIs or Firebase)
-google-services.json
+.section{
+margin-bottom:18px;
+padding:12px;
+border-radius:14px;
+background:#191919;
+}
 
-# Android Profiling
-*.hprof
+.section h3{
+margin-bottom:10px;
+color:var(--accent);
+font-size:17px;
+}
+
+.option-btn{
+padding:8px 14px;
+margin:5px;
+border:none;
+border-radius:999px;
+cursor:pointer;
+background:#242424;
+color:#eee;
+}
+
+.option-btn.selected{
+background:linear-gradient(45deg,var(--accent),var(--accent2));
+color:#111;
+box-shadow:0 0 12px var(--accent);
+}
+
+#generateBtn{
+width:100%;
+padding:14px;
+border:none;
+border-radius:14px;
+background:linear-gradient(45deg,var(--accent),var(--accent2));
+color:#111;
+font-weight:bold;
+font-size:16px;
+cursor:pointer;
+}
+
+footer{text-align:center;margin-top:18px;font-size:13px;color:#777;}
+
+input[type=range]{width:100%;accent-color:var(--accent);}
+.sliderValue{text-align:center;margin-bottom:10px;color:var(--accent);font-weight:bold;}
+
+/* LOGIN */
+
+#loginScreen{
+position:fixed;
+top:0;
+left:0;
+width:100%;
+height:100%;
+background:radial-gradient(circle at top,#1a1a1a,#000);
+display:flex;
+justify-content:center;
+align-items:center;
+z-index:999;
+}
+
+#loginBox{
+background:linear-gradient(145deg,#101010,#1a1a1a);
+padding:40px 30px;
+border-radius:26px;
+box-shadow:0 0 50px rgba(255,204,0,0.25), inset 0 0 25px rgba(255,255,255,0.03);
+text-align:center;
+width:88%;
+max-width:330px;
+animation:zoom .5s ease;
+border:1px solid rgba(255,204,0,0.2);
+}
+
+#loginBox h2{margin-bottom:20px;color:var(--accent);}
+
+#loginBox input{
+width:100%;
+padding:16px;
+border-radius:14px;
+border:1px solid #333;
+background:#0d0d0d;
+color:#fff;
+font-size:20px;
+text-align:center;
+margin-bottom:18px;
+}
+
+#loginBox input:focus{
+outline:none;
+border-color:var(--accent);
+box-shadow:0 0 14px var(--accent);
+}
+
+#loginBox button{
+width:100%;
+padding:15px;
+border:none;
+border-radius:16px;
+font-weight:bold;
+font-size:16px;
+background:linear-gradient(45deg,var(--accent),var(--accent2));
+cursor:pointer;
+}
+
+#statusMsg{margin-top:14px;font-size:15px;min-height:20px;}
+
+#loader{
+margin:18px auto 0;
+width:30px;
+height:30px;
+border:3px solid #333;
+border-top:3px solid var(--accent);
+border-radius:50%;
+display:none;
+animation:spin .7s linear infinite;
+}
+
+@keyframes spin{to{transform:rotate(360deg);}}
+@keyframes zoom{from{transform:scale(.7);opacity:0;}to{transform:scale(1);opacity:1;}}
+
+/* LOADING */
+
+#loadingScreen{
+position:fixed;
+top:0;
+left:0;
+width:100%;
+height:100%;
+background:#000;
+display:none;
+justify-content:center;
+align-items:center;
+flex-direction:column;
+z-index:10;
+}
+
+.loaderBox{
+display:flex;
+flex-direction:column;
+align-items:center;
+gap:18px;
+}
+
+.ring{
+width:70px;
+height:70px;
+border-radius:50%;
+border:5px solid transparent;
+border-top:5px solid var(--accent);
+border-right:5px solid var(--accent2);
+animation:spin 0.8s linear infinite, glow 1.5s ease-in-out infinite alternate;
+}
+
+@keyframes glow{
+from{box-shadow:0 0 10px var(--accent);}
+to{box-shadow:0 0 35px var(--accent2);}
+}
+
+.barWrap{
+width:240px;
+height:18px;
+background:#1a1a1a;
+border-radius:30px;
+overflow:hidden;
+}
+
+#progressBar{
+height:100%;
+width:0%;
+background:linear-gradient(90deg,var(--accent),var(--accent2),var(--accent));
+background-size:200% 100%;
+animation:move 1.2s linear infinite;
+}
+
+@keyframes move{
+from{background-position:0%;}
+to{background-position:200%;}
+}
+
+#loadingText{font-size:20px;font-weight:bold;color:var(--accent);}
+#loadingTips{font-size:14px;color:#aaa;animation:pulse 1.5s infinite;}
+
+@keyframes pulse{0%,100%{opacity:.4;}50%{opacity:1;}}
+
+/* RESULTADO */
+
+#resultScreen{
+position:fixed;
+top:0;
+left:0;
+width:100%;
+height:100%;
+background:radial-gradient(circle,#111,#000);
+display:none;
+justify-content:center;
+align-items:center;
+z-index:10;
+}
+
+#resultCard{
+background:#141414;
+padding:25px;
+border-radius:20px;
+box-shadow:0 0 25px rgba(255,204,0,0.2);
+width:90%;
+max-width:350px;
+text-align:center;
+}
+
+.result-item{
+background:#1d1d1d;
+padding:10px;
+margin:8px 0;
+border-radius:12px;
+font-size:17px;
+border-left:4px solid var(--accent);
+}
+
+#backBtn,#saveBtn{
+margin-top:15px;
+padding:12px 26px;
+border:none;
+border-radius:12px;
+background:linear-gradient(45deg,var(--accent),var(--accent2));
+font-weight:bold;
+cursor:pointer;
+}
+
+.introAnim{animation:introBack .6s forwards;}
+@keyframes introBack{
+0%{opacity:1;transform:scale(1);}
+50%{opacity:.3;transform:scale(1.15);}
+100%{opacity:0;transform:scale(.8);}
+}
+
+/* CORES */
+
+.colorBtn{
+width:32px;
+height:32px;
+border-radius:50%;
+border:2px solid #fff2;
+margin:5px;
+cursor:pointer;
+display:inline-block;
+}
+</style>
+</head>
+
+<body>
+
+<!-- LOGIN -->
+<div id="loginScreen">
+<div id="loginBox">
+<h2>🔒 Acesso Seguro</h2>
+<input type="password" id="passwordInput" maxlength="4" placeholder="Digite a senha">
+<button id="loginBtn">Entrar</button>
+<div id="statusMsg"></div>
+<div id="loader"></div>
+</div>
+</div>
+
+<!-- APP -->
+<div class="container" id="mainContainer" style="display:none;">
+
+<div id="favBox" style="margin-bottom:15px;"></div>
+
+<div class="section">
+<h3>Cor do Tema</h3>
+<div id="colorOptions"></div>
+</div>
+
+<div class="section">
+<h3>DPI</h3>
+<input type="range" min="0" max="1200" value="800" id="dpiSlider">
+<div class="sliderValue">DPI: <span id="dpiValue">800</span></div>
+</div>
+
+<div class="section"><h3>Marca</h3><div id="brandOptions"></div></div>
+<div class="section"><h3>Estilo</h3><div id="styleOptions"></div></div>
+<div class="section"><h3>Mira</h3><div id="aimOptions"></div></div>
+<div class="section"><h3>Experiência</h3><div id="expOptions"></div></div>
+<div class="section"><h3>Preferência</h3><div id="prefOptions"></div></div>
+
+<button id="generateBtn">GERAR SENSI</button>
+</div>
+
+<footer>Criador: DARK.ffwq</footer>
+
+<!-- LOADING -->
+<div id="loadingScreen">
+<div class="loaderBox">
+<div class="ring"></div>
+<div id="loadingText">Iniciando...</div>
+<div class="barWrap"><div id="progressBar"></div></div>
+<div id="loadingTips">Preparando algoritmo...</div>
+</div>
+</div>
+
+<!-- RESULTADO -->
+<div id="resultScreen">
+<div id="resultCard">
+<h2 style="color:var(--accent);margin-bottom:15px;">SENSIBILIDADE</h2>
+<div id="resultContent"></div>
+<button id="backBtn">GERAR NOVA</button>
+<button id="saveBtn">⭐ Salvar Favorita</button>
+</div>
+</div>
+
+<script>
+loginBtn.onclick=()=>{
+statusMsg.style.color="var(--accent)";
+statusMsg.textContent="Verificando...";
+loader.style.display="block";
+
+setTimeout(()=>{
+if(passwordInput.value==="0812"){   // SENHA ALTERADA AQUI
+statusMsg.style.color="#00ff9c";
+statusMsg.textContent="Acesso liberado ✔";
+setTimeout(()=>{
+loginScreen.style.display="none";
+mainContainer.style.display="block";
+},600);
+}else{
+statusMsg.style.color="#ff4d4d";
+statusMsg.textContent="Senha incorreta ✖";
+loader.style.display="none";
+}
+},1200);
+};
+
+/* CORES */
+const cores=[
+["#ffcc00","#ffd633"],
+["#00eaff","#00bfff"],
+["#ff4d6d","#ff758f"],
+["#00ff9c","#00cc7a"],
+["#a66bff","#7b3cff"]
+];
+
+const colorBox=document.getElementById("colorOptions");
+
+cores.forEach(c=>{
+let d=document.createElement("div");
+d.className="colorBtn";
+d.style.background=c[0];
+d.onclick=()=>{
+document.documentElement.style.setProperty("--accent",c[0]);
+document.documentElement.style.setProperty("--accent2",c[1]);
+localStorage.setItem("tema",JSON.stringify(c));
+};
+colorBox.appendChild(d);
+});
+
+let tema=JSON.parse(localStorage.getItem("tema"));
+if(tema){
+document.documentElement.style.setProperty("--accent",tema[0]);
+document.documentElement.style.setProperty("--accent2",tema[1]);
+}
+
+/* OPTIONS */
+function createOptions(id,arr,sel){
+const c=document.getElementById(id);
+arr.forEach((t,i)=>{
+let b=document.createElement("button");
+b.className="option-btn";
+b.textContent=t;
+if(i===sel)b.classList.add("selected");
+b.onclick=()=>{
+c.querySelectorAll("button").forEach(x=>x.classList.remove("selected"));
+b.classList.add("selected");
+};
+c.appendChild(b);
+});
+}
+
+createOptions("brandOptions",["iPhone","Samsung","Xiaomi","Motorola"],0);
+createOptions("styleOptions",["Solo","Ranqueada","CS","Gladiadores","Todos"],1);
+createOptions("aimOptions",["Estável","Rápida","Equilibrada"],2);
+createOptions("expOptions",["Iniciante","Intermediário","Avançado"],1);
+createOptions("prefOptions",["Baixa","Média","Alta","Mobilador"],1);
+
+/* DPI */
+dpiSlider.oninput=()=>dpiValue.textContent=dpiSlider.value;
+
+function rand(min,max){return Math.floor(Math.random()*(max-min+1))+min;}
+
+/* LOADING */
+generateBtn.onclick=()=>{
+loadingScreen.style.display="flex";
+let p=0;
+let i=setInterval(()=>{
+p+=Math.floor(Math.random()*4)+1;
+if(p>100)p=100;
+progressBar.style.width=p+"%";
+loadingText.textContent="Gerando "+p+"%";
+if(p>=100){
+clearInterval(i);
+setTimeout(()=>{
+loadingScreen.style.display="none";
+show();
+},400);
+}
+},80);
+};
+
+/* RESULTADO */
+function show(){
+let pref=document.querySelector("#prefOptions .selected").textContent;
+let dpi=parseInt(dpiSlider.value);
+let html="";
+
+if(pref==="Mobilador"){
+html+=`<div class="result-item">Horizontal: ${rand(280,320)}</div>`;
+html+=`<div class="result-item">Vertical: ${rand(280,320)}</div>`;
+}else{
+function calc(){
+let min=70,max=125;
+if(pref==="Média"){min=125;max=175;}
+if(pref==="Alta"){min=175;max=200;}
+return Math.round(rand(min,max)*(dpi/800));
+}
+html+=`<div class="result-item">DPI: ${dpi}</div>`;
+["Geral","Red Dot","2x","4x","Sniper","360"].forEach(n=>{
+html+=`<div class="result-item">${n}: ${calc()}</div>`;
+});
+}
+
+resultContent.innerHTML=html;
+resultScreen.style.display="flex";
+}
+
+/* VOLTAR */
+backBtn.onclick=()=>{
+resultCard.classList.add("introAnim");
+setTimeout(()=>{
+resultScreen.style.display="none";
+resultCard.classList.remove("introAnim");
+},600);
+};
+
+/* FAVORITA */
+saveBtn.onclick=()=>{
+localStorage.setItem("sensiFav",resultContent.innerHTML);
+favBox.innerHTML=`<div style="background:#111;padding:12px;border-radius:12px;border:1px solid var(--accent)">
+<b style="color:var(--accent);">⭐ Favorita</b><br>${resultContent.innerHTML}</div>`;
+saveBtn.textContent="✔ Salvo";
+setTimeout(()=>saveBtn.textContent="⭐ Salvar Favorita",1200);
+};
+</script>
+
+</body>
+</html>
